--- a/src/index.css
+++ b/src/index.css
@@ -187,14 +187,14 @@ code {
     height: max-content;
 }
 
-.slider {
+.slideImage {
   animation-duration: 1s;
   animation-name: slidein;
 }
 
-.slider2 {
+.sliderImage2 {
   animation-duration: 1s;
-  animation-name: slidein2;
+  animation-name: slideinx;
 }
 
 
@@ -208,7 +208,7 @@ code {
   }
 }
 
-@keyframes slidein2 {
+@keyframes slideinx {
   from {
     width: 1px;
   }
@@ -216,4 +216,64 @@ code {
   to {
     width: 615px;
   }
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 54px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 50px;
+  width: 50px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(50px);
+  -ms-transform: translateX(50px);
+  transform: translateX(50px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
